--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,9 +10,9 @@
     <header th:insert="fragments/header.html"> </header>
     <div class="container">
         <h1>Este es el index</h1>
+        <h2>Index mas pequeñito y estoy en la rama diseño</h2>
         <p th:text="${key}">Ok</p>
 
-        
     <div class = "listado">
         <h3>Ejemplo listado mediante codigo java</h3>
         <tr th:each="user : ${users}">
