Seting up new header footer and routes

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,4 +1,10 @@
 <footer>
-    <h1>Este es el footer</h1>
-    <h1>Este el footer</h1>
+    <hr>
+    <p>GuardaRopApp: follow us on social media</p>
+    <a href="https://www.youtube.com/user/Pibin85"><button>YouTube</button></a>
+    <a href="https://www.instagram.com/cocinaconlaabuela/"><button>Instagram</button></a>
+    <br>
+    <p>A que se dedica el equipo de GuardaRopApp en su tiempo libre: </p>
+    <iframe src="https://drive.google.com/file/d/1T6qy5Z6dfjGyDmHbzNaHet518_Jys6HF/preview" width="400" height="300"></iframe>
 </footer>
+
