--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,12 +1,12 @@
 <header>
-    <h1>esta es la cabecera</h1>
-    <div class="menu">
-        <a href="https://www.youtube.com/"><button>Youtube</button></a>
-        <a href="https://www.ucm.es/"><button>Ucm</button></a>
-        <a href="/form"><button>Ejemplo Formulario</button></a>
-        <a href="/"><button>Index</button></a>
+    <div class = "header">
+        <div class="title">
+            <h1>GuardaRopApp</h1>
+        </div>
+        <div class="menu">
+            <a href="/"><button>Pagina principal</button></a>
+            <a href="/upload"><button>Subir Foto</button></a>
+            <a href="/see"><button>Ver Foto</button></a>
+        </div>
     </div>
-    <div class="title">
-        <p>GuardaRopApp</p>
-    </div>
-    </header>
+</header>
