--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,15 +9,14 @@
 <body>
     <header th:insert="fragments/header.html"> </header>
     <div class="container">
-        <h1>Este es el index</h1>
-        <h2>Index mas pequeñito y estoy en la rama diseño</h2>
+        <h2>Este es el index</h2>
         <p th:text="${key}">Ok</p>
 
     <div class = "listado">
-        <h3>Ejemplo listado mediante codigo java</h3>
-        <tr th:each="user : ${users}">
-            <td th:text = "${user}">Name</td>
-        </tr>
+        <h3>Ejemplo listado mediante codigo java. Se listan las funcionalidades de nuestra app</h3>
+        <ul th:each="i : ${features}">
+            <li th:text = "${i}">Name</li>
+        </ul>
     </div>
     <footer th:insert="fragments/footer.html"> </footer>
 </body>
