--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 <body>
     <header th:insert="fragments/header.html"> </header>
     <div class="container">
-        <h2>Este es el index</h2>
+        <h2>Este es el indice</h2>
         <p th:text="${key}">Ok</p>
 
     <div class = "listado">
