imgUrl Scraper, see photo DONE

--- a/src/main/resources/templates/see.html
+++ b/src/main/resources/templates/see.html
@@ -26,6 +26,7 @@
         <div class="formResult">
             <hr>
             <p>Aqui abajo se generará tu foto mi cielo</p>
+            <img th:src="${imgUrl}"/>
         </div>
     </div>
 
