añadida pestaña de mensajes

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,11 @@
 <body class = "cuerpo1">
     <header th:insert="fragments/header.html"> </header>
     <div class ="container espacio">
+      <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+        <button class="btn btn-primary me-md-2" type="button">Filtro 1</button>
+        <button class="btn btn-primary" type="button">Filtro 2</button>
+      </div>
+
     <div class="row row-cols-1 row-cols-md-3 g-4 pt-5">
         <div class="col">
           <div class="card h-100">
