--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -22,7 +22,7 @@
                 <a class="nav-link" href="#">Favoritos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Mensajes</a>
+                <a class="nav-link" th:href="@{message}">Mensajes</a>
               </li>
             </ul>
             <form class="d-flex">
