--- a/src/main/resources/static/css/estilo.css
+++ b/src/main/resources/static/css/estilo.css
@@ -1,3 +1,4 @@
+
 .espacio{
     margin-top: 70px;
     margin-bottom: 100px;
@@ -6,4 +7,19 @@
 .espacio2{
     margin-top: 100px;
     margin-bottom: 100px;
+}
+footer{
+    text-align:center;
+    margin-top: 100px;
+    margin-bottom: 50px;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+.nav-pills{
+    margin-bottom: 30px;;
+}
+
+.btn-group{
+    margin-left: 125px;
 }
