--- a/src/main/resources/templates/favorites.html
+++ b/src/main/resources/templates/favorites.html
@@ -11,11 +11,7 @@
     <header th:insert="fragments/header.html"> </header>
     <div class ="container espacio">
       </nav>
-      <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-        <span class="badge rounded-pill bg-light text-dark">Filtro 1</span>
-        <span class="badge rounded-pill bg-light text-dark">Filtro 2</span>
-        <span class="badge rounded-pill bg-light text-dark">Filtro 3</span>
-      </div>
+      <h1>Aquí aparecen las prendas a las que diste al botón de favorito.</h1>
 
     <div class="row row-cols-1 row-cols-md-3 g-4 pt-5">
         <div class="col">
@@ -52,30 +48,18 @@
               <div class = "card-body">
               <button type="button" class="btn btn-danger"><i class="bi bi-heart"></i></button>
           </div>
-        
             </div>
           </div>
       </div>
     </div>
 
-    <!--
-    <div class="container">
-        <h2>Este es el indice</h2>
-        <p th:text="${key}">Ok</p>
-
-    <div class = "listado">
-        <h3>Ejemplo listado mediante codigo java. Se listan las funcionalidades de nuestra app</h3>
-        <ul th:each="i : ${features}">
-            <li th:text = "${i}">Name</li>
-        </ul>
-    </div>
-    <footer th:insert="fragments/footer.html"> </footer>
--->
+   
     <div class="btn-group" role="group" aria-label="Basic outlined example">
-      <button type="button" class="btn btn-outline-primary">1</button>
-      <button type="button" class="btn btn-outline-primary">2</button>
-      <button type="button" class="btn btn-outline-primary">3</button>
-    </div>
+        <button type="button" class="btn btn-outline-primary">1</button>
+        <button type="button" class="btn btn-outline-primary">2</button>
+        <button type="button" class="btn btn-outline-primary">3</button>
+      </div>
+
     <footer th:insert="fragments/footer.html"> </footer>
 </body>
 </html>
