--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,7 +2,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css" th:href= "@{/css/estilo.css}">
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark mb-5">
+
+   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark mb-5">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img th:src="@{/images/logo.png}" alt="" width="30" height="24">
@@ -19,12 +20,25 @@
                 <a class="nav-link" th:href="@{see}">Mi Armario</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Favoritos</a>
+                <a class="nav-link" th:href="@{favorites}">Favoritos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" th:href="@{message}">Mensajes</a>
               </li>
-            </ul>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Usuario
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Estadísticas</a></li>
+                  <li><a class="dropdown-item" href="#">Mi cuenta</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Cerrar Sesión</a></li>
+                </ul>
+              </li>
+              <button type="button" class="btn btn-info"><i class="bi bi-box-arrow-in-right"></i> Sign-In</button>
+              </ul>
+              
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
@@ -32,6 +46,7 @@
           </div>
         </div>
       </nav>
+    
     <!--
     <h1>esta es la cabecera</h1>
     <div class="menu">
