--- a/src/main/resources/templates/message.html
+++ b/src/main/resources/templates/message.html
@@ -12,9 +12,52 @@
 </head>
 <body>
     <header th:insert="fragments/header.html"></header>
-    
+    <div class ="container espacio">
+    </nav>
+    <ul class="nav nav-pills nav-fill">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="#">No leido</a> <span class="badge bg-primary rounded-pill">14</span>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Leido</a>
+        </li>
+      </ul>
 
-    
+
+      <div class="card">
+        <h5 class="card-header">Camiseta Nike #idPrenda</h5>
+        <div class="card-body">
+          <h5 class="card-title">Adriana</h5>
+          <p class="card-text">En cuánto dinero me dejaría esa camiseta? Gracias.</p>
+          <a href="#" class="btn btn-primary">Responder</a>
+        </div>
+        <div class="card-footer">
+            <small class="text-muted">Send 3 mins ago</small>
+          </div>
+        
+        <h1></h1><!--Para poner un espacio entre cada tarjeta-->
+
+        <div class="card">
+            <h5 class="card-header">Nike Jordan #idPrenda</h5>
+            <div class="card-body">
+              <h5 class="card-title">Carlos</h5>
+              <p class="card-text">De dónde son las zapatillas? Gracias.</p>
+              <a href="#" class="btn btn-primary">Responder</a>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted">Send 2 hours ago</small>
+              </div>
+
+      </div>
+    </div>
+</div>
+
+    <div class="btn-group" role="group" aria-label="Basic outlined example">
+        <button type="button" class="btn btn-outline-primary">1</button>
+        <button type="button" class="btn btn-outline-primary">2</button>
+        <button type="button" class="btn btn-outline-primary">3</button>
+      </div>
+
     <footer th:insert="fragments/footer.html"></footer>
 </body>
 </html>
