--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -26,7 +26,7 @@
                 <a class="nav-link" th:href="@{message}">Mensajes</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-person-circle"></i>
                   Usuario
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -36,7 +36,7 @@
                   <li><a class="dropdown-item" href="#">Cerrar Sesión</a></li>
                 </ul>
               </li>
-              <button type="button" class="btn btn-info"><i class="bi bi-box-arrow-in-right"></i> Sign-In</button>
+              <a role="button" th:href="@{login}" class="btn btn-info"><i class="bi bi-box-arrow-in-right"></i>    Log-In</a></ul>
               </ul>
               
             <form class="d-flex">
@@ -47,18 +47,9 @@
         </div>
       </nav>
     
-    <!--
-    <h1>esta es la cabecera</h1>
-    <div class="menu">
-        <a href="https://www.youtube.com/"><button>Youtube</button></a>
-        <a href="https://www.ucm.es/"><button>Ucm</button></a>
-        <a href="/form"><button>Ejemplo Formulario</button></a>
-        <a href="/"><button>Index</button></a>
-    </div>
-    <div class="title">
-        <p>GuardaRopApp</p>
-    </div>
--->
+
+      <!--Script para que funcione el dropdown-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
     </header>
 
