Testing image scrapping from db

--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -34,6 +34,7 @@
                 <p style="color:darkcyan" th:text="${userID}">Ok</p>
                 <p style="color: red;" th:text="${excepcion}">OK</p>
           </div>
+          <p th:text="${exito}">exito</p>
     </div>
 
     <footer th:insert="fragments/footer.html"></footer>
