--- a/src/main/resources/templates/see.html
+++ b/src/main/resources/templates/see.html
@@ -15,7 +15,7 @@
         <h2>Formulario</h2>
         <form action="/see" method="POST" th:object="${formulario}">
             <div class ="form"> 
-                <label for="text">Id de la foto:</label>
+                <label for="text">Nombre de usuario:</label>
                 <input th:field="*{text}" type="text" id="texto" name="texto">
                 <p style= "color:red" th:if="${#fields.hasErrors('text')}" th:errors="*{text}">Name Error</p>
                 <p th:unless="${#fields.hasErrors('text')}"></p>
@@ -25,9 +25,13 @@
 
         <div class="formResult">
             <hr>
-            <p>Aqui abajo se generará tu foto mi cielo</p>
-            <img th:src="${imgUrl}"/>
+            <p>Aqui abajo se verán las fotos del usuario</p>
+            <ul th:each="i : ${urlList}">
+                <li> FOTO</li>
+                <img th:src="${i}"/>
+            </ul>
         </div>
+        <p style="color: red;" th:text="${excepcion}">OK</p>
     </div>
 
     <footer th:insert="fragments/footer.html"></footer>
