--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -11,24 +11,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upload Photo</title>
 </head>
-<body class = "cuerpo2">
+<body>
     <header th:insert="fragments/header.html"></header>
-    <div class="container">
+    <div class="container espacio2">
         <h2>Formulario</h2>
         <form action="/upload" method="POST" th:object="${formulario}" enctype='multipart/form-data'>
-            <div class ="form"> 
-                <label for="text">Introduce your username:</label>
-                <input th:field="*{text}" type="text" id="text" name="userID">
-                <label for="img">Select image:</label>
-                <input th:field="*{img}" type="file" id="img" name="img" accept="image/*">
-                <br>
-                <input type="submit">
+            <div class="row">
+                <div class="col">
+                  <input th:field="*{text}" type="text" class="form-control" placeholder="Nombre" aria-label="First name">
+                </div>
+                <div class="input-group mb-3">
+                    <input th:field="*{img}" type="file" class="form-control" id="inputGroupFile02">
+                    <label class="input-group-text" for="inputGroupFile02">Upload</label>
+                </div>
+                  <button type="submit" class="btn btn-primary">Subir</button>
             </div>
+              
           </form>
 
           <div class="formResult">
                 <hr>
-                <p>Aqui abajo se generará tu id mi cielo</p>
+                <p>Aqui abajo se generará tu id</p>
                 <p style="color:aqua" th:text="${id}">Ok</p>
                 <p>Subiste esta imagen</p>
                 <img th:src="${imgUrl}"/>
